<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item1"
        android:title="@string/menu_item1"
        android:icon="@drawable/my_icon1"
        />
    <item
        android:id="@+id/item2"
        android:title="@string/menu_item2"
        android:icon="@mipmap/ic_launcher"
        />
    <item
        android:id="@+id/item3"
        android:title="@string/menu_item3"
        android:icon="@mipmap/ic_launcher_round"
        />
    <item
        android:id="@+id/item4"
        android:title="@string/menu_item4"
        android:icon="@mipmap/ic_launcher_round"
        />
    <item
        android:id="@+id/item5"
        android:title="@string/menu_item5"
        android:icon="@mipmap/ic_launcher_round"
        />
</menu>